--- a/styles.css
+++ b/styles.css
@@ -101,3 +101,63 @@ body {
         right: 20px;
     }
 }
+
+/* Estilos para asegurar la responsividad mobile-first */
+.columns {
+    overflow-x: scroll;
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.column {
+    min-width: 300px;
+    margin-right: 10px;
+}
+
+.box {
+    margin-bottom: 10px;
+    background-color: white;
+    /* Color puro */
+}
+
+.modal {
+    display: none;
+    /* Ocultar el modal por defecto */
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Fondo del modal */
+}
+
+.modal-content {
+    background: white;
+    /* Color de fondo del contenido del modal */
+    padding: 20px;
+    border-radius: 8px;
+    width: 90%;
+    max-width: 500px;
+}
+
+button.is-primary {
+    margin-bottom: 20px;
+}
+
+/* Dark/Light mode */
+body.dark-mode .box {
+    background-color: black;
+    color: white;
+}
+
+body.dark-mode .modal-content {
+    background-color: bla;
+    color: white;
+}
+
+body.dark-mode .modal-background {
+    background-color: black;
+}
