--- a/styles.css
+++ b/styles.css
@@ -84,23 +84,26 @@ body {
 
 /* Responsividad */
 @media (max-width: 425px) {
-    .columns {
-        flex-direction: column;
-        height: auto;
-    }
-
-    .column {
-        flex: 1;
-        margin-right: 0;
-        margin-bottom: 20px;
-    }
-
-    .new-task-button {
-        position: absolute;
-        bottom: 20px;
-        right: 20px;
+    .modal-content {
+        width: 100%;
+        margin: 0;
+        padding: 10px;
     }
 }
+
+
+.column {
+    flex: 1;
+    margin-right: 0;
+    margin-bottom: 20px;
+}
+
+.new-task-button {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+}
+
 
 /* Estilos para asegurar la responsividad mobile-first */
 .columns {
@@ -130,7 +133,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: black;
     /* Fondo del modal */
 }
 
@@ -160,4 +163,18 @@ body.dark-mode .modal-content {
 
 body.dark-mode .modal-background {
     background-color: black;
+}
+
+body.dark-mode {
+    background-color: black;
+    color: white;
+}
+
+body.dark-mode .box {
+    background-color: #333;
+}
+
+body.dark-mode .modal-content {
+    background-color: #222;
+    color: white;
 }
