--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: black;
     justify-content: center;
     align-items: center;
 }
@@ -79,10 +79,10 @@ body.dark-mode {
 }
 
 body.dark-mode .box {
-    background-color: #333;
+    background-color: gray;
 }
 
 body.dark-mode .modal-content {
-    background-color: #222;
+    background-color: black;
     color: white;
 }
