--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* Estilos generales */
 body {
     font-family: 'Arial', sans-serif;
     transition: background-color 0.3s, color 0.3s;
@@ -35,7 +34,6 @@ h1 {
     margin-bottom: 10px;
 }
 
-/* Modal styles */
 .modal.is-active {
     display: flex;
 }
@@ -52,7 +50,6 @@ h1 {
     margin: auto;
 }
 
-/* Dark mode styles */
 body.dark-mode {
     background-color: black;
     color: white;
@@ -73,7 +70,6 @@ body.dark-mode .modal-content {
     background-color: white;
 }
 
-/* Responsive design */
 @media (min-width: 1440px) {
     .columns {
         flex-wrap: nowrap;
@@ -110,7 +106,7 @@ body.dark-mode .modal-content {
 }
 
 .column {
-    max-height: 80vh; /* Ajusta según el diseño */
+    max-height: 80vh; 
     overflow-y: auto;
 }
 
