--- a/styles.css
+++ b/styles.css
@@ -166,6 +166,8 @@ section.dark-mode {
 
     .column {
         flex: 1 0 100%;
+        max-height: 80vh;
+        overflow-y: auto;
     }
 }
 
@@ -182,7 +184,7 @@ section.dark-mode {
     }
 
     .column {
-        max-height: 70vh;
+        height: fit-content;
         overflow-y: auto;
     }
 
@@ -217,7 +219,8 @@ section.dark-mode {
     }
 
     .column {
-        flex: 1 0 100%;
+        /* flex: 1 0 100%; */
+        height: fit-content;
     }
     #taskColumns {
         display: flex;
@@ -226,11 +229,6 @@ section.dark-mode {
         justify-content: center;
     }
     
-}
-
-.column {
-    max-height: 80vh;
-    overflow-y: auto;
 }
 
 .box {
